--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                 </p>
                 <p>
                   Previously, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a>. 
-                  After that, I was a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a>  advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>. I am extremely grateful to all the professors, mentors and friends who have helped me on my research journey!&#x1F496;
+                  After that, I was a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a>  advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>. 
+                </p>
+                <p>
+                  I am extremely grateful to all the professors, mentors and friends who have helped me on my research journey!&#x1F496;
 		            </p>
 		<!-- I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning. -->
 		<p>
