--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
 		<tr>
-    <td style="padding:20px;width:100%;text-align:center;vertical-align:middle">
+    <!-- <td style="padding:20px;width:100%;text-align:center;vertical-align:middle">
       <span style="font-family: 'Bradley Hand ITC', serif; font-weight: bold; font-size: 22px;">"Beautiful things don't ask for attention"</span>
-    </td>
+    </td> -->
   </tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
 
