--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Ziniu(Michael) Zhang
                 </p>
                 <p>
-                  Hi there!&#x1F917; I am a Ph.D Student in the <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences</a> at <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang.</a> 
+                  Hi there!&#x1F917; I am a Ph.D Student of <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences</a> in <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang.</a> 
 
                 </p>
                 <p>
@@ -35,11 +35,11 @@
 		            </p>
 		<!-- I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning. -->
 		<p>
-		  I obtained my bachelor degree in Computer Science (Honor College) from <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
+		  I obtained my bachelor degree in Computer Science (<a href="https://www.yingcai.uestc.edu.cn/">Honor College</a>) from <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
 		</p>
 		<p style="text-align:center">
                   <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/Michael21208234">Twitter</a> &nbsp;/&nbsp;
+                  <a href="https://twitter.com/mick2147483647">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/MichaelZona">Github</a>
                 </p>
               </td>
