--- a/index.html
+++ b/index.html
@@ -70,6 +70,34 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
+            <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
+              <td style="padding:20px;width:25%;vertical-align:middle; height: 100px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
+                <div class="one" style="height: 130%; display: flex; justify-content: center; align-items: center;">
+                  <!-- 替换为静态图像 -->
+                  <img src='images/gradex.png' style="max-height: 100%; max-width: 100%;">
+                </div>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle;height: 100px;">
+            <!--     <a href="https://reconfusion.github.io/"> -->
+                  <span class="papertitle">Scalable Fine-tuning from Multiple Data Sources: A First-Order Approximation Approach</span>
+            <!--     </a> -->
+                <br>
+                <!-- 作者等信息 -->
+                Dongyue Li*, Ziniu Zhang*, Lu Wang, Hongyang R. Zhang
+                <br>
+                (* equal contributions)
+              <br>
+                <em>EMNLP 2024</em>
+                <br>
+                
+                <a href="https://arxiv.org/pdf/2409.19458">Paper</a>
+                /
+                <a href="https://github.com/VirtuosoResearch/Scalable-finetuning">Project</a>
+                <p></p>
+            
+              </td>
+            </tr>
+
 
 <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
   <td style="padding:20px;width:25%;vertical-align:middle; height: 100px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
