--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 Dongyue Li*, Ziniu Zhang*, Lu Wang, Hongyang R. Zhang
 
               <br>
-                <em>EMNLP 2024</em>
+                <em>Conference on Empirical Methods in Natural Language Processing(EMNLP), 2024.</em>
                 <br>
                 
                 <a href="https://arxiv.org/pdf/2409.19458">Paper</a>
@@ -230,7 +230,7 @@
               <td style="padding:0px">
                 <br>
 		 <p style="text-align:right;font-size:small;">
-                  Last update: 7/7/2024
+                  Last update: 10/1/2024
                 </p>
                 <p style="text-align:right;font-size:small;">
                   Thanks a lot to <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a> for his template!
