--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
                 <h2>Research</h2>
                 <p>
 <!--                   I have a broad interest in computer vision tasks both in 2D pixel and 3D point cloud. Now my research is focused on using vision large language models to reason and make decisions.  -->
-                  My research interest aligns on using language models to reason and make decision.
-
-                  I am passionate about using cutting-edge technology to make our lives more and more convenient.
+                  My research interest now aligns on machine learning theory.
 			<br>
 			 <br>
                 (* equal contributions)
