--- a/index.html
+++ b/index.html
@@ -185,15 +185,12 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Service</h2>
 <!-- 		<p> -->
+		- Reviewer: AAAI(2025).
+		<br>
 		- Volunteer in the 10th China Collegiate Programming Contest(CCPC) Final.
 		<br>
-                - Director of 2022 UESTC ACM-ICPC Training Project in Dynamic Programming.
-		<!-- <br> -->
 <!-- 		</p><p> -->
-		<!-- - Co-organizer of the selection of 2022 UESTC ACM-ICPC university team. -->
-		<br>
-<!-- 		</p><p> -->
-		- Member of the technical consulting group of 2021 National Olympiad in Informatics in Provinces(NOIP).
+		- Member of the technical group of 2021 National Olympiad in Informatics in Provinces(NOIP).
 		<br>
 <!-- 		</p> -->
               </td>
