--- a/index.html
+++ b/index.html
@@ -73,59 +73,15 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 
-
-
-    <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff">
-      <td style="padding:10px;width:25%;vertical-align:middle;height: 100px;">
-        <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
-          <img src='images/gradex.png' style="max-height: 100%; max-width: 100%;">
-        </div>
-      </td>
-      <td style="padding:10px;width:75%;vertical-align:middle;height: 100px;">
-        <span class="papertitle">Scalable Fine-tuning from Multiple Data Sources: A First-Order Approximation Approach</span>
-        <br>
-        Dongyue Li*, Ziniu Zhang*, Lu Wang, Hongyang R. Zhang
-        <br>
-        <em>Conference on Empirical Methods in Natural Language Processing(EMNLP), 2024.</em>
-        <br>
-        <a href="https://arxiv.org/pdf/2409.19458">Paper</a> /
-        <a href="https://github.com/VirtuosoResearch/Scalable-finetuning">Project</a>
-        <p></p>
-      </td>
-    </tr>
-
-    <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff">
-      <td style="padding:10px;width:25%;vertical-align:middle;height: 100px;">
-        <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
-          <img src='images/teaser.png' style="max-height: 100%; max-width: 100%;">
-        </div>
-      </td>
-      <td style="padding:10px;width:75%;vertical-align:middle;height: 100px;">
-        <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents</span>
-        <br>
-        Ziniu Zhang*, Shulin Tian*, Liangyu Chen*, Ziwei Liu
-        <br>
-        <em>Preprint 2024</em>
-        <br>
-        <a href="https://mmina.cliangyu.com">Project</a> /
-        <a href="https://arxiv.org/abs/2404.09992">Paper</a> /
-        <a href="https://www.youtube.com/watch?v=3xp007ZBK3g">Demo</a>
-        <p></p>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-
 		  
             <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
-              <td style="padding:22px;width:25%;vertical-align:middle; height: 122px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
+              <td style="padding:20px;width:25%;vertical-align:middle;"> <!-- 设置固定高度，根据实际需要进行调整 -->
                 <div class="one" style="height: 130%; display: flex; justify-content: center; align-items: center;">
                   <!-- 替换为静态图像 -->
                   <img src='images/gradex.png' style="max-height: 100%; max-width: 100%;">
                 </div>
               </td>
-              <td style="padding:15px;width:75%;vertical-align:middle;height: 100px;">
+              <td style="padding:20px;width:75%;vertical-align:middle;">
             <!--     <a href="https://reconfusion.github.io/"> -->
                   <span class="papertitle">Scalable Fine-tuning from Multiple Data Sources: A First-Order Approximation Approach</span>
             <!--     </a> -->
@@ -147,13 +103,13 @@
 
 
 <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
-  <td style="padding:22px;width:25%;vertical-align:middle; height: 122px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
+  <td style="padding:22px;width:25%;vertical-align:middle;"> <!-- 设置固定高度，根据实际需要进行调整 -->
     <div class="one" style="height: 130%; display: flex; justify-content: center; align-items: center;">
       <!-- 替换为静态图像 -->
       <img src='images/teaser.png' style="max-height: 100%; max-width: 100%;">
     </div>
   </td>
-  <td style="padding:15px;width:75%;vertical-align:middle;height: 100px;">
+  <td style="padding:15px;width:75%;vertical-align:middle;">
 <!--     <a href="https://reconfusion.github.io/"> -->
       <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents</span>
 <!--     </a> -->
