--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 <!-- 		<p> -->
 		- I'm addicted in badminton&#x1F3F8; and won some medals in UESTC. My fav players are Lin Dan, Chiharu Shida and Shi Yu Qi. 
 		<br>
-                - I'm also passionate about cycling&#x1F6B4;. I have completed routes such as the Chengdu Greenway Loop(100km), UESTC-Longquan Mount.(101km), UESTC-Dujiangyan(88km), and others. My goal is to cycle along G318 to Lhasa one day.
+                - I'm also passionate about cycling&#x1F6B4;. I have completed several 100+ km routes. My goal is to cycle along G318 to Lhasa one day.
 		<br>
 		- I enjoy hiking &#x26F0;&#xFE0F;, skiing &#x26F7;&#xFE0F; (alpine skiing), ice skating &#x26F8;&#xFE0F;, swimming &#x1F3CA; etc. Feel free to contact me if you have same interests!
 		<br>
