--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
 <!-- 		<p> -->
 		- I'm addicted in badminton&#x1F3F8; and won some medals in UESTC. My fav players are Lin Dan, Chiharu Shida and Shi Yu Qi. 
 		<br>
-                - I'm also passionate about cycling&#x1F6B4;. I have completed several 100+ km routes. My goal is to cycle along G318 to Lhasa one day.
+                - I'm also passionate about cycling&#x1F6B4;. I have completed several 100+ km routes. My goal is to cycle along G318 to Lhasa.
 		<br>
-		- I enjoy hiking &#x26F0;&#xFE0F;, skiing &#x26F7;&#xFE0F; (alpine skiing), ice skating &#x26F8;&#xFE0F;, swimming &#x1F3CA; etc. Feel free to contact me if you have same interests!
+		- I enjoy hiking &#x26F0;&#xFE0F;, alpine skiing &#x26F7;&#xFE0F;, ice skating &#x26F8;&#xFE0F;, swimming &#x1F3CA; etc. Feel free to contact me if you have same interests!
 		<br>
 		- I served as the major volunteer in <a href="https://zh.wikipedia.org/wiki/2021%E5%B9%B4%E5%A4%8F%E5%AD%A3%E4%B8%96%E7%95%8C%E5%A4%A7%E5%AD%B8%E9%81%8B%E5%8B%95%E6%9C%83"> 31st FISU World University Games</a>&#x1F3C3;.
 		      
