--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                   After that, I was a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a>  advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>. 
                 </p>
                 <p>
-                  I am extremely grateful to all the professors, mentors and friends who have helped me on my research journey!&#x1F496;
+                  I am extremely grateful to all professors, mentors, and friends who have helped me on my research journey!&#x1F496;
 		            </p>
 		<!-- I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning. -->
 		<p>
-		  I obtained my bachelor degree in Computer Science (<a href="https://www.yingcai.uestc.edu.cn/">Honor College</a>) from <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
+		  I obtained my bachelor's degree in Computer Science (<a href="https://www.yingcai.uestc.edu.cn/">Honor College</a>) from <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
 		</p>
 		<p style="text-align:center">
                   <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
@@ -60,7 +60,7 @@
                 <h2>Research</h2>
                 <p>
 <!--                   I have a broad interest in computer vision tasks both in 2D pixel and 3D point cloud. Now my research is focused on using vision large language models to reason and make decisions.  -->
-                  My research interest now aligns on machine learning theory.
+                  My research interest now aligns with machine learning theory.
 			<br>
 			 <br>
                 (* equal contributions)
@@ -93,9 +93,9 @@
                 <em>Conference on Empirical Methods in Natural Language Processing(EMNLP), 2024.</em>
                 <br>
                 
-                <a href="https://arxiv.org/pdf/2409.19458">Paper</a>
-                /
                 <a href="https://github.com/VirtuosoResearch/Scalable-finetuning">Project</a>
+		/
+                <a href="https://arxiv.org/pdf/2409.19458">Paper</a>
                 <p></p>
             
               </td>
