--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 Dongyue Li*, Ziniu Zhang*, Lu Wang, Hongyang R. Zhang
 
               <br>
-                <em>Conference on Empirical Methods in Natural Language Processing(EMNLP Finding), 2024.</em>
+                <em>Conference on Empirical Methods in Natural Language Processing(EMNLP Findings), 2024.</em>
                 <br>
                 
                 <a href="https://github.com/VirtuosoResearch/Scalable-finetuning">Project</a>
