--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2>Research</h2>
                 <p>
 <!--                   I have a broad interest in computer vision tasks both in 2D pixel and 3D point cloud. Now my research is focused on using vision large language models to reason and make decisions.  -->
-                  My research interest now aligns with machine learning theory.
+                  My research interest now aligns with machine learning theory and algorithms.
 			<br>
 			 <br>
                 (* equal contributions)
@@ -174,11 +174,11 @@
 
 		        - Silver medal in the 47th <a href="https://icpc.global/">ACM-ICPC</a> International Collegiate Programming Contest Asian Reginal (Rank: 48/511)
 		      <br>
-			- Silver medal in the 8th China Collegiate Programming Contest(<a href="https://ccpc.io/">CCPC</a>).
+			- Silver medal in the 8th China Collegiate Programming Contest (<a href="https://ccpc.io/">CCPC</a>).
 		      <br>
-			- Bronze medal in the 7th China Collegiate Programming Contest(<a href="https://ccpc.io/">CCPC</a>).
+			- Bronze medal in the 7th China Collegiate Programming Contest (<a href="https://ccpc.io/">CCPC</a>).
 		      <br>
-			- First Prize in the 23rd National Olympic in Informatics in Provinces(NOIP)(Senior group).
+			- First Prize in the 23rd National Olympic in Informatics in Provinces (NOIP) (Senior group).
               </td>
             </tr>
           </tbody></table>
@@ -188,12 +188,12 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Service</h2>
 <!-- 		<p> -->
-		- Reviewer: AAAI(2025).
+		- Reviewer: AAAI (2025).
 		<br>
-		- Volunteer in the 10th China Collegiate Programming Contest(CCPC) Final.
+		- Volunteer in the 10th China Collegiate Programming Contest (CCPC) Final.
 		<br>
 <!-- 		</p><p> -->
-		- Member of the technical group of 2021 National Olympiad in Informatics in Provinces(NOIP).
+		- Member of the technical group of 2021 National Olympiad in Informatics in Provinces (NOIP).
 		<br>
 <!-- 		</p> -->
               </td>
