--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 		<p style="text-align:center">
                   <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/mick2147483647">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/MichaelZona">Github</a>
+                  <a href="https://github.com/MichaelZona">Github</a> &nbsp;/&nbsp;
+		  <a href="https://www.linkedin.com/in/ziniuzhang/">LinkedIn</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
