--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Service</h2>
 <!-- 		<p> -->
-		- Reviewer: AAAI (2025), DMLR (2024).
+		- Reviewer: AAAI (2025), AISTATS (2025).
 		<br>
 		- Volunteer in the 10th China Collegiate Programming Contest (CCPC) Final.
 		<br>
