--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2>Research</h2>
                 <p>
 <!--                   I have a broad interest in computer vision tasks both in 2D pixel and 3D point cloud. Now my research is focused on using vision large language models to reason and make decisions.  -->
-                  My research interest now aligns with machine learning theory and algorithms.
+                  My research interest now aligns with machine learning theory and algorithms. Agent is one application of the algorithm.
 			<br>
 			 <br>
                 (* equal contributions)
