--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
                   Ziniu(Michael) Zhang
                 </p>
                 <p>
-                  Hi there!&#x1F917; I am a Ph.D Student of <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences</a> in <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang.</a> 
+                  Hi there!&#x1F917; I am a Ph.D student of <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences</a> in <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang.</a> 
  
                 </p>
                 <p>
-                  Previously, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a>. 
-                  After that, I was a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a>  advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>. 
+                  Before my PhD study, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> and a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a>  advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>
                 </p>
                 <p>
-                  I am extremely grateful to all professors, mentors, and friends who have helped me on my research journey!&#x1F496;
-		            </p>
+                  I am extremely grateful to all professors, mentors, and friends who have helped me on my research journey.
+		        </p>
 		<p>
 		  I obtained my bachelor's degree in Computer Science (<a href="https://www.yingcai.uestc.edu.cn/">Honor College</a>) from <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
 		</p>
@@ -73,7 +72,7 @@
 
             <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
               <td style="padding:20px;width:25%;vertical-align:middle;"> <!-- 设置固定高度，根据实际需要进行调整 -->
-                <div class="one" style="height: 90%; display: flex; justify-content: center; align-items: center;">
+                <div class="one" style="height: 50%; display: flex; justify-content: center; align-items: center;">
                   <!-- 替换为静态图像 -->
                   <img src='images/EnsembleLoRA.png' style="max-height: 100%; max-width: 125%;">
                 </div>
