--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</p>
 		<p style="text-align:center">
                   <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/mick2147483647">Twitter</a> &nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?user=kIDk8ggAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/MichaelZona">Github</a> &nbsp;/&nbsp;
 		  <a href="https://www.linkedin.com/in/ziniuzhang/">LinkedIn</a>
                 </p>
@@ -83,7 +83,7 @@
                 Dongyue Li, Ziniu Zhang, Lu Wang, Hongyang R. Zhang
 
               <br>
-                <em>ACL 2025.</em>
+                <em>ACL 2025</em>
                 <br>
                 
                 <a href="https://github.com/VirtuosoResearch/EnsembleLoRA">Project</a>
@@ -107,7 +107,7 @@
                 Dongyue Li*, Ziniu Zhang*, Lu Wang, Hongyang R. Zhang
 
               <br>
-                <em>EMNLP (Findings) 2024.</em>
+                <em>EMNLP 2024 (Findings)</em>
                 <br>
                 
                 <a href="https://github.com/VirtuosoResearch/Scalable-finetuning">Project</a>
@@ -131,7 +131,7 @@
 	  Shulin Tian*, Ziniu Zhang*, Liangyu Chen*, Ziwei Liu
     <br>
 
-    <em>ACL (Findings) 2025.</em>
+    <em>ACL 2025 (Findings)</em>
     <br>
     <a href="https://mmina.cliangyu.com">Project</a>
     /
