--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <td style="padding:20px;width:75%;vertical-align:middle;">
                   <span class="papertitle">Learning Multimodal Embeddings for Traffic Accident Prediction and Causal Estimation</span>
                 <br>
-                Ziniu Zhang, Minxuan Duan, Haris N. Koutsopoulos, Hongyang R. Zhang
+                <b>Ziniu Zhang</b>, Minxuan Duan, Haris N. Koutsopoulos, Hongyang R. Zhang
 
               <br>
                 <em>KDD 2026</em>
@@ -103,7 +103,7 @@
               <td style="padding:20px;width:75%;vertical-align:middle;">
                   <span class="papertitle">Linear-Time Demonstration Selection for In-Context Learning via Gradient Estimation</span>
                 <br>
-                Ziniu Zhang*, Zhenshuo Zhang*, Dongyue Li, Lu Wang, Jennifer Dy, Hongyang R. Zhang
+                <b>Ziniu Zhang</b>*, Zhenshuo Zhang*, Dongyue Li, Lu Wang, Jennifer Dy, Hongyang R. Zhang
 
               <br>
                 <em>EMNLP 2025</em>
@@ -130,7 +130,7 @@
               <td style="padding:20px;width:75%;vertical-align:middle;">
                   <span class="papertitle">Efficient Ensemble for Fine-tuning Language Models on Multiple Datasets</span>
                 <br>
-                Dongyue Li, Ziniu Zhang, Lu Wang, Hongyang R. Zhang
+                Dongyue Li, <b>Ziniu Zhang</b>, Lu Wang, Hongyang R. Zhang
 
               <br>
                 <em>ACL 2025</em>
@@ -154,7 +154,7 @@
               <td style="padding:20px;width:75%;vertical-align:middle;">
                   <span class="papertitle">Scalable Fine-tuning from Multiple Data Sources: A First-Order Approximation Approach</span>
                 <br>
-                Dongyue Li*, Ziniu Zhang*, Lu Wang, Hongyang R. Zhang
+                Dongyue Li*, <b>Ziniu Zhang</b>*, Lu Wang, Hongyang R. Zhang
 
               <br>
                 <em>EMNLP 2024 (Findings)</em>
@@ -178,7 +178,7 @@
   <td style="padding:20px;width:75%;vertical-align:middle;">
       <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents</span>
     <br>
-	  Shulin Tian*, Ziniu Zhang*, Liangyu Chen*, Ziwei Liu
+	  Shulin Tian*, <b>Ziniu Zhang</b>*, Liangyu Chen*, Ziwei Liu
     <br>
 
     <em>ACL 2025 (Findings)</em>
