--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
                 <br>
                 
                 <a href="https://github.com/VirtuosoResearch/EnsembleLoRA">Project</a>
-		/
+		            /
                 <a href="https://arxiv.org/pdf/2505.21930">Paper</a>
+		            /
+                <a href="https://virtuosoresearch.github.io/#/blogs/blog/EnsembleLoRANote">Blog</a>
                 <p></p>
             
               </td>
