--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                 <b>Ziniu Zhang</b>, Minxuan Duan, Haris N. Koutsopoulos, Hongyang R. Zhang
 
               <br>
-                <em>KDD 2026</em>
+                <em>To appear in KDD 2026</em>
                 <br>
                 
-                <a href="https://ziniuzhang.github.io/mmtrace/">Project</a>
+                <a href="https://virtuosoresearch.github.io/#/blogs/blog/MMTraCENote">Project</a>
 		            /
                 <a href="https://arxiv.org/pdf/2512.02920">Paper</a>
                 <p></p>
