--- a/index.html
+++ b/index.html
@@ -196,26 +196,23 @@
 </tr>
 
           
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
-            <tr>
-              <td>
+	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+              <tr>
+              <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Awards</h2>
-              </td>
-            </tr>
-          </tbody></table>
-          <table width="100%" align="center" border="0" cellpadding="20"><tbody>
-            
-            <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/icpc-logo2.png" style="width:127px; height:100px;"></td>
-              <td width="75%" valign="center">
-
-		        - Silver medal in the 47th <a href="https://icpc.global/">ACM-ICPC</a> International Collegiate Programming Contest Asian Regional (Rank: 48/511)
-		      <br>
-			- Silver medal in the 8th China Collegiate Programming Contest (<a href="https://ccpc.io/">CCPC</a>).
-		      <br>
-			- Bronze medal in the 7th China Collegiate Programming Contest (<a href="https://ccpc.io/">CCPC</a>).
-		      <br>
-			- First Prize in the 23rd National Olympiad in Informatics in Provinces (NOIP) (Senior group).
+		- Silver medal in the 47th <a href="https://icpc.global/">ACM-ICPC</a> International Collegiate Programming Contest Asian Regional (Rank: 48/511)
+		<br>
+		- Silver medal in the 8th China Collegiate Programming Contest (<a href="https://ccpc.io/">CCPC</a>).
+		<br>
+		- Bronze medal in the 7th China Collegiate Programming Contest (<a href="https://ccpc.io/">CCPC</a>).
+		<br>
+		- First Prize in the 23rd National Olympiad in Informatics in Provinces (NOIP) (Senior group).
+		<br>
+		- Outstanding Undergraduate Thesis Award, UESTC.
+		<br>
+		- Scholarship for Overseas Visiting Student Program, UESTC.
+		<br>
+		- First-class Student Scholarship, UESTC.
               </td>
             </tr>
           </tbody></table>
