--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Service</h2>
-		- Reviewer: AAAI (2025), AISTATS (2025, 2026), DMLR (2024, 2025).
+		- Reviewer: AAAI (2025), AISTATS (2025, 2026), DMLR (2024, 2025), TMLR (2026).
 		<br>
 		- Volunteer in the 10th China Collegiate Programming Contest (CCPC) Final.
 		<br>
@@ -236,7 +236,7 @@
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Appendix</h2>
-		- I'm addicted to badminton and have won several medals in UESTC. My favorite player is Lee Chong Wei. 
+		- I'm addicted to badminton and have won several medals in UESTC. My favorite player is Lee Chong Wei and Shi Yu Qi. 
 		<br>
                 - I'm also passionate about cycling. I have completed several routes exceeding 100 km. My goal is to cycle along G318 to Lhasa.
 		<br>
