--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  
                 </p>
                 <p>
-                  Before my PhD study, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> and a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a>  advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>
+                  Before my PhD study, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> and a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a>  advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>.
                 </p>
                 <p>
                   I am extremely grateful to all professors, mentors, and friends who have helped me on my research journey.
@@ -223,6 +223,8 @@
                 <h2>Service</h2>
 		- Reviewer: AAAI (2025), AISTATS (2025, 2026), DMLR (2024, 2025), TMLR (2026).
 		<br>
+    - Teaching Assistant: DS 5220 Supervised Machine Learning and Learning Theory, Northeastern University.
+    <br>
 		- Volunteer in the 10th China Collegiate Programming Contest (CCPC) Final.
 		<br>
 		- Member of the technical group of 2021 National Olympiad in Informatics in Provinces (NOIP).
