--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   I am extremely grateful to all professors, mentors, and friends who have helped me on my research journey.
 		        </p>
 		<p>
-		  I obtained my bachelor's degree in Computer Science (<a href="https://www.yingcai.uestc.edu.cn/">Honors College</a>) from <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a> in 2024.
+		  I obtained my bachelor's degree in Computer Science (<a href="https://www.yingcai.uestc.edu.cn/en/">Honors College</a>) from <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China (UESTC)</a> in 2024.
 		</p>
 		<p style="text-align:center">
                   <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
