--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Appendix</h2>
-		- I'm addicted to badminton and have won several medals in UESTC. My favorite player is Lee Chong Wei and Shi Yu Qi. 
+		- I'm addicted to badminton and have won several medals in UESTC. My favorite players are Lee Chong Wei and Shi Yu Qi. 
 		<br>
                 - I'm also passionate about cycling. I have completed several routes exceeding 100 km. My goal is to cycle along G318 to Lhasa.
 		<br>
