--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <br>
                 - I served as the major volunteer in <a href="https://zh.wikipedia.org/wiki/2021%E5%B9%B4%E5%A4%8F%E5%AD%A3%E4%B8%96%E7%95%8C%E5%A4%A7%E5%AD%B8%E9%81%8B%E5%8B%95%E6%9C%83"> 31st FISU World University Games</a>.
                 <br>
-                - Happy to make friends and connect with people! My WeChat ID is MichaelZona.
+                - Happy to make friends and connect with people! My Chinese name is 张子牛. I was born in Wuhu, a beautiful city by the Yangtze River. My WeChat ID is MichaelZona.
               </td>
             </tr>
           </tbody></table>
