--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Ziniu (Michael) Zhang
                 </p>
                 <p>
-                  I am a Ph.D student of <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences</a> in <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang</a>. My name can be pronounced as "Tzu-niu Chang".
+                  I am a Ph.D student of Khoury College of Computer Sciences in <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang</a>. My name can be pronounced as "Tzu-niu Chang".
 
                 </p>
                 <p>
