update research interest

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <h2>Research</h2>
                     <p>
-                    My research interest now aligns with fundamental machine learning and data mining.
+                    My research interest now aligns with fundamental machine learning.
 			        <br>
 			        <br>
                     (* equal contributions)
